DOC-2026: Updated basic example

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -31,18 +31,47 @@ This initial release of the {pluginname} developer documentation does not includ
 
 To add the {pluginname} plugin to the editor, add both `{plugincode}` to the `plugins` option in the editor configuration and the `ai_request` function to the editor configuration.
 
-For example:
+For example, interfacing with the OpenAI Completions API:
 
 [source,js]
 ----
+const api_key = '<INSERT_API_KEY_HERE>';
+
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
   plugins: 'ai',
   toolbar: 'aidialog aishortcuts',
   ai_request: (request, respondWith) => {
-    respondWith.string((signal) => {
-      
-    });
+    const openAiOptions = {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+        'Authorization': `Bearer ${api_key}`
+      },
+      body: JSON.stringify({
+        model: 'gpt-3.5-turbo',
+        temperature: 0.7,
+        max_tokens: 800,
+        messages: [{ role: 'user', content: request.prompt }],
+      })
+    };
+    respondWith.string((signal) => window.fetch('https://api.openai.com/v1/chat/completions', { signal, ...openAiOptions })
+      .then(async (response) => {
+        if (response.ok) {
+          return response.json();
+        } else {
+          return Promise.reject(`Failed to communicate with the OpenAI API. ${await response.text()}`);
+        }
+      })
+      .then((data) =>
+        data.error
+        ? Promise.reject(`Failed to communicate with the ChatGPT API because of ${data.error.type} error: ${data.error.message}`)
+        : data)
+      .then((data) =>
+        // Extract the response content from the data returned by the API
+        data?.choices[0]?.message?.content?.trim()
+      )
+    );
   }
 });
 ----
