DOC-2026: ai_shortcuts.adoc
Code presentation edit.

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/partials/configuration/ai_shortcuts.adoc
+++ b/modules/ROOT/partials/configuration/ai_shortcuts.adoc
@@ -58,14 +58,14 @@ tinymce.init({
     { title: 'Stage play', prompt: 'Convert this to stage play format.' },
     { title: 'Classical', subprompts: 
       [
-      { title: 'Dialogue', prompt: 'Convert this to a Socratic dialogue.' },
-      { title: 'Homeric', prompt: 'Convert this to a Classical Epic.' },
+        { title: 'Dialogue', prompt: 'Convert this to a Socratic dialogue.' },
+        { title: 'Homeric', prompt: 'Convert this to a Classical Epic.' }
       ]
     },
     { title: 'Celtic', subprompts:
       [
-      { title: 'Bardic', prompt: 'Convert this to Bardic verse.' },
-      { title: 'Filí', prompt: 'Convert this to Filí-an verse.' },
+        { title: 'Bardic', prompt: 'Convert this to Bardic verse.' },
+        { title: 'Filí', prompt: 'Convert this to Filí-an verse.' }
       ]
     },
   ]
