DOC-2026: ai_request.adoc
Edit to the code-specific portion of the sentence.

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/partials/configuration/ai_request.adoc
+++ b/modules/ROOT/partials/configuration/ai_request.adoc
@@ -162,7 +162,7 @@ Both callbacks provide a `signal` parameter.
 
 The `respondWith.string` callback provides functionality for displaying the entire response from the AI. 
 
-The final response is to be returned as a string using a `+Promise+` within the `+resolve+` callback. This string will be displayed within the {pluginname} dialog.
+The final response is to be returned as a string using `+Promise.resolve()+`. This string will be displayed within the {pluginname} dialog.
 
 
 ==== The `respondWith.stream` callback
