DOC-2026: ai_request.adoc
Edits to [source,text] to remind folk what context and question are.

--- a/modules/ROOT/partials/configuration/ai_request.adoc
+++ b/modules/ROOT/partials/configuration/ai_request.adoc
@@ -135,9 +135,9 @@ Answer the question based on the context below.
 The response should be in HTML format.
 The response should preserve any HTML formatting, links, and styles in the context.
 
-Context: """<context>"""
+Context: """<the-selected-text>"""
 
-Question: """<query>"""
+Question: """<the-prompt>"""
 
 Answer:
 ----
