DOC-2026: Fix example

--- a/modules/ROOT/partials/commands/ai-cmds.adoc
+++ b/modules/ROOT/partials/commands/ai-cmds.adoc
@@ -14,7 +14,7 @@ tinymce.activeEditor.execCommand('mceAiDialogClose');
 ----
 
 [[using-mceAiDialog]]
-== Using `+mceAiDialog+`
+=== Using `+mceAiDialog+`
 
 `+mceAiDialog+` accepts an object with any of the following key-value pairs:
 
