--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -35,6 +35,8 @@ For example, interfacing with the OpenAI Completions API:
 
 [source,js]
 ----
+// This example stores the API key in the client side integration. This is not recommended for any purpose.
+// Instead, an alternate method for retrieving the API key should be used.
 const api_key = '<INSERT_API_KEY_HERE>';
 
 tinymce.init({
@@ -74,7 +76,7 @@ tinymce.init({
 
 == Using a proxy server with {pluginname}
 
-As per OpenAI’s https://help.openai.com/en/articles/5112595-best-practices-for-api-key-safety[best practices for API key safety], deployment of an API key in a client-side environment is specifically not recommended.
+NOTE: As per OpenAI’s https://help.openai.com/en/articles/5112595-best-practices-for-api-key-safety[best practices for API key safety], deployment of an API key in a client-side environment is specifically not recommended.
 
 Using a proxy server obviates this, reducing financial and service uptime risks.
 
