DOC-2093: 6.6-release-notes.adoc
Verb-noun number agreement is important.

Co-authored-by: shirqa <43625458+ShiridiGandham@users.noreply.github.com>

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -160,7 +160,7 @@ For more information on **AI Assistant**, see xref:ai.adoc[AI Assistant].
 === When defining a modal or inline dialog, if the buttons property is an empty array, or is not defined at all, the footer will now no longer be rendered
 //#TINY-9996
 
-A {productname} dialog’s UI consist of three main sections: the title, body, and footer.
+A {productname} dialog’s UI consists of three main sections: the title, body, and footer.
 
 Previously, it was a requirement that any {productname} dialog — built-in or custom — displayed all three parts.
 
