DOC-2101: dialog_persistent.adoc
The params are in a separate object to the dialog spec.

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/configuration/dialog_persistent.adoc
+++ b/modules/ROOT/partials/configuration/dialog_persistent.adoc
@@ -39,8 +39,8 @@ tinymce.activeEditor.windowManager.open({
       type: 'submit',
       text: 'OK'
     }
-  ]
-  { inline, persistent: 'true' }
+  ]},
+  { inline: 'toolbar', persistent: 'true' }
 });
 ----
 
