DOC-2101: dialog_persistent.adoc
Missing semi-colon at the end of the line is no longer missing.

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/partials/configuration/dialog_persistent.adoc
+++ b/modules/ROOT/partials/configuration/dialog_persistent.adoc
@@ -90,7 +90,7 @@ const openDialog = () => {
 };
 
 const focusDialog = () => {
-  dialogInstanceApi.focus('name')
+  dialogInstanceApi.focus('name');
 }
 
 editor.ui.registry.addButton('example', {
