DOC-2101: dialog_persistent.adoc
In the ‘using `focus` to refocus an open but de-focused dialog` section, added text to note the need for and use of a check for an open dialog in the code sample.

--- a/modules/ROOT/partials/configuration/dialog_persistent.adoc
+++ b/modules/ROOT/partials/configuration/dialog_persistent.adoc
@@ -48,7 +48,12 @@ tinymce.activeEditor.windowManager.open({
 
 Because a dialog with an `{ inline, persistent: 'true' }` property does not close when the dialog loses focus, it is possible for an end-user to open a further instance of the dialog.
 
-To prevent this, use the xref:apis/tinymce.editor/#focus[`focus`] method in the xref:apis/tinymce.windowmanager/#return-value[`DialogInstanceAPI`]. This transfers focus to the open dialog rather than creating a new instance of the same dialog.
+To prevent this
+
+* add a check that the dialog is already open; and
+
+* use the xref:apis/tinymce.editor/#focus[`focus`] method in the xref:apis/tinymce.windowmanager/#return-value[`DialogInstanceAPI`] to transfer focus to the open dialog rather than creating a new instance of the same dialog.
+
 
 [source,js]
 ----
