DOC-2102: dialog_streamContent.adoc
Removed border from code sample.

Co-authored-by: mkzhx <mkzh.org@gmail.com>

--- a/modules/ROOT/partials/configuration/dialog_streamContent.adoc
+++ b/modules/ROOT/partials/configuration/dialog_streamContent.adoc
@@ -32,8 +32,7 @@ tinymce.activeEditor.windowManager.open({
       {
         name: 'preview',
         type: 'iframe',
-        streamContent: 'true',
-        border: 'true'
+        streamContent: true
       }
     ]
     },
