--- a/modules/ROOT/partials/configuration/dialog_border.adoc
+++ b/modules/ROOT/partials/configuration/dialog_border.adoc
@@ -7,7 +7,7 @@ include::partial$misc/admon-requires-6.6v.adoc[]
 
 The property has a default value of `+false+`.
 
-When this property is set to true, a border displays around the `iframe` component.
+When this property is set to `true`, a border displays around the `iframe` component.
 
 The `iframe` component is also highlighted when it takes focus (by, for example, using the Tab key to change focus within the active dialog).
 
