DOC-2103: dialog_border.adoc
Code-sample edit.

Co-authored-by: mkzhx <mkzh.org@gmail.com>

--- a/modules/ROOT/partials/configuration/dialog_border.adoc
+++ b/modules/ROOT/partials/configuration/dialog_border.adoc
@@ -29,7 +29,7 @@ tinymce.activeEditor.windowManager.open({
       {
         name: 'preview',
         type: 'iframe',
-        border: 'true',
+        border: true,
       }
     ]
   },
