--- a/modules/ROOT/partials/configuration/dialog_border.adoc
+++ b/modules/ROOT/partials/configuration/dialog_border.adoc
@@ -9,7 +9,7 @@ The property has a default value of `+false+`.
 
 When this property is set to `true`, a border displays around the `iframe` component.
 
-The `iframe` component is also highlighted when it takes focus (by, for example, using the Tab key to change focus within the active dialog).
+The border is also highlighted when the `iframe` component takes focus (by, for example, using the Tab key to change focus within the active dialog).
 
 *Type:* `+Boolean+`
 
