DOC-2101: dialog_persistent.adoc
Code sample corrected.

Co-authored-by: shanmen-tiny <shanmen.ng@tiny.cloud>

--- a/modules/ROOT/partials/configuration/dialog_persistent.adoc
+++ b/modules/ROOT/partials/configuration/dialog_persistent.adoc
@@ -40,7 +40,7 @@ tinymce.activeEditor.windowManager.open({
       text: 'OK'
     }
   ]},
-  { inline: 'toolbar', persistent: 'true' }
+  { inline: 'toolbar', persistent: true }
 });
 ----
 
