DOC-2026: ai-proxy.adoc
Typo correction.

--- a/modules/ROOT/pages/ai-proxy.adoc
+++ b/modules/ROOT/pages/ai-proxy.adoc
@@ -88,4 +88,4 @@ The reference application provides a technical walkthrough of the source code, h
 
 The technical walkthrough documentation can be found in the https://github.com/tinymce/openai-proxy-reference-implementation/[project documentation,window=_blank].
 
-The reference application is packaged in a Docker container so you will need https://www.docker.com/[Docker] to run the example Application.
+The reference application is packaged in a Docker container so you will need https://www.docker.com/[Docker] to run the example application.
